--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,34 @@
+
+
 .App {
-  text-align: center;
+  position: fixed;
+  bottom: 0px;
+  right: 0px;
+  left: 0px;
+  top: 0px;
+  background-color: green;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+nav {
+  height: 100px;
+  background-color: aqua;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+section {
+  height: 100%;
+  min-height: 600px;
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: blueviolet;
 }
 
-.App-link {
-  color: #61dafb;
+.sidebar {
+  width: 20%;
+  background-color: aquamarine;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.story-block {
+  width: 60%;
+  min-width: 400px;
 }
